--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-*,
-*::after,
-*::before {
+*, *::after, *::before {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -128,6 +126,14 @@ body {
   background-color: #6bf0ff;
   filter: blur(10vmin);
 }
+.birthday-label {
+  color: #a7ffee; 
+  text-align: center;
+  font-family: 'Brush Script MT', cursive; 
+  font-size: 40px; 
+  margin-top: 20px;
+}
+
 .flower__leaf {
   position: absolute;
   bottom: 0;
@@ -178,123 +184,12 @@ body {
   width: 60%;
   height: 60%;
   border-radius: inherit;
-  background-image: repeating-linear-gradient(
-      300deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      45deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      67.5deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      135deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      45deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      112.5deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      112.5deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      45deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      22.5deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      45deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      22.5deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      135deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      157.5deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      67.5deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    repeating-linear-gradient(
-      67.5deg,
-      rgba(0, 0, 0, 0.03) 0px,
-      rgba(0, 0, 0, 0.03) 1px,
-      transparent 1px,
-      transparent 12px
-    ),
-    linear-gradient(90deg, #ffeb12, #ffce00);
+  background-image: repeating-linear-gradient(300deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(45deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(67.5deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(135deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(45deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(112.5deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(112.5deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(45deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(22.5deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(45deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(22.5deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(135deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(157.5deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(67.5deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(67.5deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), linear-gradient(90deg, #ffeb12, #ffce00);
 }
 .flower__line {
   height: 55vmin;
   width: 1.5vmin;
-  background-image: linear-gradient(
-      to left,
-      #000,
-      transparent,
-      rgba(255, 255, 255, 0.2)
-    ),
-    linear-gradient(to top, transparent 10%, #14757a, #39c6d6);
+  background-image: linear-gradient(to left, #000, transparent, rgba(255, 255, 255, 0.2)), linear-gradient(to top, transparent 10%, #14757a, #39c6d6);
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
   animation: grow-flower-tree 4s backwards;
 }
@@ -317,9 +212,7 @@ body {
   top: 45%;
   transform: rotate(70deg) rotateY(30deg);
 }
-.flower__line__leaf--3,
-.flower__line__leaf--4,
-.flower__line__leaf--6 {
+.flower__line__leaf--3, .flower__line__leaf--4, .flower__line__leaf--6 {
   border-top-right-radius: 0;
   border-bottom-left-radius: 0;
   border-top-left-radius: var(--h);
@@ -432,12 +325,7 @@ body {
   height: var(--size);
   border-top-left-radius: var(--size);
   border-top-right-radius: var(--size);
-  background-image: linear-gradient(
-    to top,
-    transparent,
-    transparent 30%,
-    var(--c)
-  );
+  background-image: linear-gradient(to top, transparent, transparent 30%, var(--c));
   z-index: 100;
 }
 .flower__grass__leaf--1 {
@@ -451,7 +339,7 @@ body {
   0% {
     transform-origin: bottom left;
     transform: rotate(-20deg) scale(0);
-  }
+ }
 }
 .flower__grass__leaf--2 {
   top: -5%;
@@ -464,7 +352,7 @@ body {
   0% {
     transform-origin: bottom right;
     transform: rotate(10deg) scale(0);
-  }
+ }
 }
 .flower__grass__leaf--3 {
   top: 5%;
@@ -477,7 +365,7 @@ body {
   0% {
     transform-origin: bottom left;
     transform: rotate(-18deg) rotateX(-20deg) scale(0);
-  }
+ }
 }
 .flower__grass__leaf--4 {
   top: 6%;
@@ -490,7 +378,7 @@ body {
   0% {
     transform-origin: bottom right;
     transform: rotate(2deg) scale(0);
-  }
+ }
 }
 .flower__grass__leaf--5 {
   top: 20%;
@@ -503,7 +391,7 @@ body {
   0% {
     transform-origin: bottom left;
     transform: rotate(-24deg) rotateX(-20deg) scale(0);
-  }
+ }
 }
 .flower__grass__leaf--6 {
   top: 22%;
@@ -516,7 +404,7 @@ body {
   0% {
     transform-origin: bottom right;
     transform: rotate(10deg) scale(0);
-  }
+ }
 }
 .flower__grass__leaf--7 {
   top: 39%;
@@ -529,7 +417,7 @@ body {
   0% {
     transform-origin: bottom left;
     transform: rotate(-10deg) scale(0);
-  }
+ }
 }
 .flower__grass__leaf--8 {
   top: 40%;
@@ -542,7 +430,7 @@ body {
   0% {
     transform-origin: bottom right;
     transform: rotate(10deg) scale(0);
-  }
+ }
 }
 .flower__grass__overlay {
   position: absolute;
@@ -569,13 +457,12 @@ body {
   animation: flower-g-long-ans 3s linear infinite;
 }
 @keyframes flower-g-long-ans {
-  0%,
-  100% {
+  0%, 100% {
     transform: rotate(-30deg) rotateY(-20deg);
-  }
+ }
   50% {
     transform: rotate(-32deg) rotateY(-20deg);
-  }
+ }
 }
 .flower__g-long__top {
   top: calc(var(--h) * -1);
@@ -605,11 +492,7 @@ body {
   height: 50vmin;
   border-top-left-radius: 100%;
   border-left: 2vmin solid #079097;
-  background-image: linear-gradient(
-    to bottom,
-    transparent,
-    var(--dark-color) 60%
-  );
+  background-image: linear-gradient(to bottom, transparent, var(--dark-color) 60%);
   -webkit-mask-image: linear-gradient(to top, transparent 30%, #079097 60%);
 }
 .flower__g-right--1 {
@@ -626,22 +509,20 @@ body {
   opacity: 0.8;
 }
 @keyframes flower-g-right-ans {
-  0%,
-  100% {
+  0%, 100% {
     transform: rotate(20deg);
-  }
+ }
   50% {
     transform: rotate(24deg) rotateX(-20deg);
-  }
+ }
 }
 @keyframes flower-g-right-ans--2 {
-  0%,
-  100% {
+  0%, 100% {
     transform: rotateY(-180deg) rotate(0deg) rotateX(-20deg);
-  }
+ }
   50% {
     transform: rotateY(-180deg) rotate(6deg) rotateX(-20deg);
-  }
+ }
 }
 .flower__g-front {
   position: absolute;
@@ -653,23 +534,17 @@ body {
   animation: flower__g-front-ans 2s linear infinite;
 }
 @keyframes flower__g-front-ans {
-  0%,
-  100% {
+  0%, 100% {
     transform: rotate(-28deg) rotateY(30deg) scale(1.04);
-  }
+ }
   50% {
     transform: rotate(-35deg) rotateY(40deg) scale(1.04);
-  }
+ }
 }
 .flower__g-front__line {
   width: 0.3vmin;
   height: 20vmin;
-  background-image: linear-gradient(
-    to top,
-    transparent,
-    #079097,
-    transparent 100%
-  );
+  background-image: linear-gradient(to top, transparent, #079097, transparent 100%);
   position: relative;
 }
 .flower__g-front__leaf-wrapper {
@@ -709,14 +584,12 @@ body {
 @keyframes flower__g-front__leaf-left-ans-2 {
   0% {
     transform: rotateY(-180deg) scale(0);
-  }
+ }
 }
-.flower__g-front__leaf-wrapper--5,
-.flower__g-front__leaf-wrapper--6 {
+.flower__g-front__leaf-wrapper--5, .flower__g-front__leaf-wrapper--6 {
   top: 2vmin;
 }
-.flower__g-front__leaf-wrapper--7,
-.flower__g-front__leaf-wrapper--8 {
+.flower__g-front__leaf-wrapper--7, .flower__g-front__leaf-wrapper--8 {
   top: 6.5vmin;
 }
 .flower__g-front__leaf-wrapper--2 {
@@ -740,36 +613,21 @@ body {
 @keyframes flower__g-front__leaf-ans {
   0% {
     transform: rotate(10deg) scale(0);
-  }
+ }
 }
 @keyframes flower__g-front__leaf-left-ans {
   0% {
     transform: rotateY(-180deg) rotate(5deg) scale(0);
-  }
+ }
 }
 .flower__g-front__leaf {
   width: 10vmin;
   height: 10vmin;
   border-radius: 100% 0% 0% 100% / 100% 100% 0% 0%;
   box-shadow: inset 0 2px 1vmin rgba(44, 238, 252, 0.2);
-  background-image: linear-gradient(
-      to bottom left,
-      transparent,
-      var(--dark-color)
-    ),
-    linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
-  -webkit-mask-image: linear-gradient(
-    to bottom right,
-    #159faa 50%,
-    transparent 50%,
-    transparent
-  );
-  mask-image: linear-gradient(
-    to bottom right,
-    #159faa 50%,
-    transparent 50%,
-    transparent
-  );
+  background-image: linear-gradient(to bottom left, transparent, var(--dark-color)), linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
+  -webkit-mask-image: linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
+  mask-image: linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
 }
 .flower__g-fr {
   position: absolute;
@@ -780,13 +638,12 @@ body {
   animation: flower__g-fr-ans 2s linear infinite;
 }
 @keyframes flower__g-fr-ans {
-  0%,
-  100% {
+  0%, 100% {
     transform: rotate(2deg);
-  }
+ }
   50% {
     transform: rotate(4deg);
-  }
+ }
 }
 .flower__g-fr .leaf {
   width: 30vmin;
@@ -805,18 +662,8 @@ body {
   height: 10vmin;
   border-radius: 100% 0% 0% 100% / 100% 100% 0% 0%;
   box-shadow: inset 0 2px 1vmin rgba(44, 238, 252, 0.2);
-  background-image: linear-gradient(
-      to bottom left,
-      transparent,
-      var(--dark-color) 98%
-    ),
-    linear-gradient(to bottom right, #23f0ff 45%, transparent 50%, transparent);
-  -webkit-mask-image: linear-gradient(
-    135deg,
-    #159faa 40%,
-    transparent 50%,
-    transparent
-  );
+  background-image: linear-gradient(to bottom left, transparent, var(--dark-color) 98%), linear-gradient(to bottom right, #23f0ff 45%, transparent 50%, transparent);
+  -webkit-mask-image: linear-gradient(135deg, #159faa 40%, transparent 50%, transparent);
 }
 .flower__g-fr__leaf--1 {
   left: 20vmin;
@@ -827,7 +674,7 @@ body {
   0% {
     transform-origin: left;
     transform: rotate(45deg) scale(0);
-  }
+ }
 }
 .flower__g-fr__leaf--2 {
   left: 12vmin;
@@ -857,7 +704,7 @@ body {
   0% {
     transform-origin: left;
     transform: rotate(55deg) scale(0);
-  }
+ }
 }
 .flower__g-fr__leaf--6 {
   left: 0vmin;
@@ -869,7 +716,7 @@ body {
   0% {
     transform-origin: right;
     transform: rotate(25deg) rotateY(-180deg) scale(0);
-  }
+ }
 }
 .flower__g-fr__leaf--7 {
   left: 5vmin;
@@ -881,7 +728,7 @@ body {
   0% {
     transform-origin: left;
     transform: rotate(45deg) scale(0);
-  }
+ }
 }
 .flower__g-fr__leaf--8 {
   left: -4vmin;
@@ -893,7 +740,7 @@ body {
   0% {
     transform-origin: right;
     transform: rotate(15deg) rotateY(-180deg) scale(0);
-  }
+ }
 }
 .long-g {
   position: absolute;
@@ -906,11 +753,7 @@ body {
   transform: scale(0.8) rotate(-5deg);
 }
 .long-g--1 .leaf {
-  -webkit-mask-image: linear-gradient(
-    to top,
-    transparent 40%,
-    #079097 80%
-  ) !important;
+  -webkit-mask-image: linear-gradient(to top, transparent 40%, #079097 80%) !important;
 }
 .long-g--1 .leaf--1 {
   --w: 5vmin;
@@ -918,23 +761,16 @@ body {
   left: -2vmin;
   transform: rotate(3deg) rotateY(-180deg);
 }
-.long-g--2,
-.long-g--3 {
+.long-g--2, .long-g--3 {
   bottom: -3vmin;
   left: -35vmin;
   transform-origin: center;
   transform: scale(0.6) rotateX(60deg);
 }
-.long-g--2 .leaf,
-.long-g--3 .leaf {
-  -webkit-mask-image: linear-gradient(
-    to top,
-    transparent 50%,
-    #079097 80%
-  ) !important;
+.long-g--2 .leaf, .long-g--3 .leaf {
+  -webkit-mask-image: linear-gradient(to top, transparent 50%, #079097 80%) !important;
 }
-.long-g--2 .leaf--1,
-.long-g--3 .leaf--1 {
+.long-g--2 .leaf--1, .long-g--3 .leaf--1 {
   left: -1vmin;
   transform: rotateY(-180deg);
 }
@@ -943,11 +779,7 @@ body {
   bottom: 0vmin;
 }
 .long-g--3 .leaf {
-  -webkit-mask-image: linear-gradient(
-    to top,
-    transparent 40%,
-    #079097 80%
-  ) !important;
+  -webkit-mask-image: linear-gradient(to top, transparent 40%, #079097 80%) !important;
 }
 .long-g--4 {
   left: 25vmin;
@@ -956,11 +788,7 @@ body {
   transform: scale(0.6) rotateX(60deg);
 }
 .long-g--4 .leaf {
-  -webkit-mask-image: linear-gradient(
-    to top,
-    transparent 50%,
-    #079097 80%
-  ) !important;
+  -webkit-mask-image: linear-gradient(to top, transparent 50%, #079097 80%) !important;
 }
 .long-g--5 {
   left: 42vmin;
@@ -992,11 +820,7 @@ body {
   height: var(--h);
   border-top-left-radius: 100%;
   border-left: 2vmin solid var(--c);
-  -webkit-mask-image: linear-gradient(
-    to top,
-    transparent 20%,
-    var(--dark-color)
-  );
+  -webkit-mask-image: linear-gradient(to top, transparent 20%, var(--dark-color));
   transform-origin: bottom center;
 }
 .long-g .leaf--0 {
@@ -1027,31 +851,28 @@ body {
   animation: leaf-ans-3 3s linear infinite;
 }
 @keyframes leaf-ans-1 {
-  0%,
-  100% {
+  0%, 100% {
     transform: rotate(-5deg) scale(1);
-  }
+ }
   50% {
     transform: rotate(5deg) scale(1.1);
-  }
+ }
 }
 @keyframes leaf-ans-2 {
-  0%,
-  100% {
+  0%, 100% {
     transform: rotateY(-180deg) rotate(5deg);
-  }
+ }
   50% {
     transform: rotateY(-180deg) rotate(0deg) scale(1.1);
-  }
+ }
 }
 @keyframes leaf-ans-3 {
-  0%,
-  100% {
+  0%, 100% {
     transform: rotate(-10deg) rotateY(-180deg);
-  }
+ }
   50% {
     transform: rotate(-20deg) rotateY(-180deg);
-  }
+ }
 }
 .grow-ans {
   animation: grow-ans 2s var(--d) backwards;
@@ -1060,99 +881,94 @@ body {
   0% {
     transform: scale(0);
     opacity: 0;
-  }
+ }
 }
 @keyframes light-ans {
   0% {
     opacity: 0;
     transform: translateY(0vmin);
-  }
+ }
   25% {
     opacity: 1;
     transform: translateY(-5vmin) translateX(-2vmin);
-  }
+ }
   50% {
     opacity: 1;
     transform: translateY(-15vmin) translateX(2vmin);
     filter: blur(0.2vmin);
-  }
+ }
   75% {
     transform: translateY(-20vmin) translateX(-2vmin);
     filter: blur(0.2vmin);
-  }
+ }
   100% {
     transform: translateY(-30vmin);
     opacity: 0;
     filter: blur(1vmin);
-  }
+ }
 }
 @keyframes moving-flower-1 {
-  0%,
-  100% {
+  0%, 100% {
     transform: rotate(2deg);
-  }
+ }
   50% {
     transform: rotate(-2deg);
-  }
+ }
 }
 @keyframes moving-flower-2 {
-  0%,
-  100% {
+  0%, 100% {
     transform: rotate(18deg);
-  }
+ }
   50% {
     transform: rotate(14deg);
-  }
+ }
 }
 @keyframes moving-flower-3 {
-  0%,
-  100% {
+  0%, 100% {
     transform: rotate(-18deg);
-  }
+ }
   50% {
     transform: rotate(-20deg) rotateY(-10deg);
-  }
+ }
 }
 @keyframes blooming-leaf-right {
   0% {
     transform-origin: left;
     transform: rotate(70deg) rotateY(30deg) scale(0);
-  }
+ }
 }
 @keyframes blooming-leaf-left {
   0% {
     transform-origin: right;
     transform: rotate(-70deg) rotateY(30deg) scale(0);
-  }
+ }
 }
 @keyframes grow-flower-tree {
   0% {
     height: 0;
     border-radius: 1vmin;
-  }
+ }
 }
 @keyframes blooming-flower {
   0% {
     transform: scale(0);
-  }
+ }
 }
 @keyframes moving-grass {
-  0%,
-  100% {
+  0%, 100% {
     transform: rotate(-48deg) rotateY(40deg);
-  }
+ }
   50% {
     transform: rotate(-50deg) rotateY(40deg);
-  }
+ }
 }
 @keyframes moving-grass--2 {
-  0%,
-  100% {
+  0%, 100% {
     transform: scale(0.5) rotate(75deg) rotateX(10deg) rotateY(-200deg);
-  }
+ }
   50% {
     transform: scale(0.5) rotate(79deg) rotateX(10deg) rotateY(-200deg);
-  }
+ }
 }
 .growing-grass {
   animation: growing-grass-ans 1s 2s backwards;
@@ -1160,7 +976,7 @@ body {
 @keyframes growing-grass-ans {
   0% {
     transform: scale(0);
-  }
+ }
 }
 .not-loaded * {
   animation-play-state: paused !important;
